day7/challenges/samples/challenge-4/2_apis/4_visitreports/visitreport-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visitreports-deploy
  labels:
    application: scmcontacts
    service: visitreportsapi
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      application: scmcontacts
      service: visitreportsapi
  template:
    metadata:
      labels:
        application: scmcontacts
        service: visitreportsapi
    spec:
      automountServiceAccountToken: false
      containers:
        - name: application
          resources:
            requests:
              memory: '64Mi'
              cpu: '100m'
            limits:
              memory: '256Mi'
              cpu: '500m'
          image: <ACR_NAME>.azurecr.io/adc-visitreports-api:2.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
