day7/challenges/samples/challenge-4/2_apis/4_visitreports/visitreport-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: visitreportapi
  labels:
    application: scmcontacts
    service: visitreportsapi
spec:
  type: ClusterIP
  selector:
    application: scmcontacts
    service: visitreportsapi
  ports:
    - port: 8080
      targetPort: 3000
